--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -7,201 +7,201 @@ $mobile-breakpoint: 660px;
 // For testing colors https://material.io/tools/color/#!/?view.left=0&view.right=1
 // http://mcg.mbitson.com/#!?cfprimary=%23318bd6&cfaccent=%23001d40&cfyellow=%23ddc61e&cdgreen=%2329cc5b&cfgray=%23e4ecf7&themename=careerfair
 $md-cfprimary: (
-    50 : #e6f1fa,
-    100 : #c1dcf3,
-    200 : #98c5eb,
-    300 : #6faee2,
-    400 : #509cdc,
-    500 : #318bd6,
-    600 : #2c83d1,
-    700 : #2578cc,
-    800 : #1f6ec6,
-    900 : #135bbc,
-    A100 : #ecf4ff,
-    A200 : #b9d4ff,
-    A400 : #86b5ff,
-    A700 : #6da6ff,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
+  50 : #e6f1fa,
+  100 : #c1dcf3,
+  200 : #98c5eb,
+  300 : #6faee2,
+  400 : #509cdc,
+  500 : #318bd6,
+  600 : #2c83d1,
+  700 : #2578cc,
+  800 : #1f6ec6,
+  900 : #135bbc,
+  A100 : #ecf4ff,
+  A200 : #b9d4ff,
+  A400 : #86b5ff,
+  A700 : #6da6ff,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 );
 
 $md-cfaccent: (
-    50 : #e0e4e8,
-    100 : #b3bbc6,
-    200 : #808ea0,
-    300 : #4d6179,
-    400 : #263f5d,
-    500 : #001d40,
-    600 : #001a3a,
-    700 : #001532,
-    800 : #00112a,
-    900 : #000a1c,
-    A100 : #5a79ff,
-    A200 : #2750ff,
-    A400 : #002ef3,
-    A700 : #0029da,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #ffffff,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #ffffff,
-        A200 : #ffffff,
-        A400 : #ffffff,
-        A700 : #ffffff,
-    )
-);
-
-$md-cfyellow: (
-    50 : #fbf8e4,
-    100 : #f5eebc,
-    200 : #eee38f,
-    300 : #e7d762,
-    400 : #e2cf40,
-    500 : #ddc61e,
-    600 : #d9c01a,
-    700 : #d4b916,
-    800 : #cfb112,
-    900 : #c7a40a,
-    A100 : #fffcf1,
-    A200 : #fff2be,
-    A400 : #ffe88b,
-    A700 : #ffe272,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #000000,
-        800 : #000000,
-        900 : #000000,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
-
-$md-cdgreen: (
-    50 : #e5f9eb,
-    100 : #bff0ce,
-    200 : #94e6ad,
-    300 : #69db8c,
-    400 : #49d474,
-    500 : #29cc5b,
-    600 : #24c753,
-    700 : #1fc049,
-    800 : #19b940,
-    900 : #0fad2f,
-    A100 : #dcffe2,
-    A200 : #a9ffb7,
-    A400 : #76ff8d,
-    A700 : #5dff78,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #000000,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
-
-$md-cfgray: (
-    50 : #fcfdfe,
-    100 : #f7f9fd,
-    200 : #F2F3F5,
-    300 : #ecf2f9,
-    400 : #e8eff8,
-    500 : #e4ecf7,
-    600 : #e1eaf6,
-    700 : #dde7f5,
-    800 : #d9e4f3,
-    900 : #d1dff1,
+  50 : #e0e4e8,
+  100 : #b3bbc6,
+  200 : #808ea0,
+  300 : #4d6179,
+  400 : #263f5d,
+  500 : #001d40,
+  600 : #001a3a,
+  700 : #001532,
+  800 : #00112a,
+  900 : #000a1c,
+  A100 : #5a79ff,
+  A200 : #2750ff,
+  A400 : #002ef3,
+  A700 : #0029da,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #ffffff,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
     A100 : #ffffff,
     A200 : #ffffff,
     A400 : #ffffff,
     A700 : #ffffff,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #000000,
-        800 : #000000,
-        900 : #000000,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
+  )
+);
+
+$md-cfyellow: (
+  50 : #fbf8e4,
+  100 : #f5eebc,
+  200 : #eee38f,
+  300 : #e7d762,
+  400 : #e2cf40,
+  500 : #ddc61e,
+  600 : #d9c01a,
+  700 : #d4b916,
+  800 : #cfb112,
+  900 : #c7a40a,
+  A100 : #fffcf1,
+  A200 : #fff2be,
+  A400 : #ffe88b,
+  A700 : #ffe272,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #000000,
+    900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+$md-cdgreen: (
+  50 : #e5f9eb,
+  100 : #bff0ce,
+  200 : #94e6ad,
+  300 : #69db8c,
+  400 : #49d474,
+  500 : #29cc5b,
+  600 : #24c753,
+  700 : #1fc049,
+  800 : #19b940,
+  900 : #0fad2f,
+  A100 : #dcffe2,
+  A200 : #a9ffb7,
+  A400 : #76ff8d,
+  A700 : #5dff78,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+$md-cfgray: (
+  50 : #fcfdfe,
+  100 : #f7f9fd,
+  200 : #F2F3F5,
+  300 : #ecf2f9,
+  400 : #e8eff8,
+  500 : #e4ecf7,
+  600 : #e1eaf6,
+  700 : #dde7f5,
+  800 : #d9e4f3,
+  900 : #d1dff1,
+  A100 : #ffffff,
+  A200 : #ffffff,
+  A400 : #ffffff,
+  A700 : #ffffff,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #000000,
+    900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 );
 
 $md-cfred: (
-    50 : #f9eaea,
-    100 : #f1cbcb,
-    200 : #e8a9a9,
-    300 : #de8787,
-    400 : #d76d6d,
-    500 : #d05353,
-    600 : #cb4c4c,
-    700 : #c44242,
-    800 : #be3939,
-    900 : #b32929,
-    A100 : #fff3f3,
-    A200 : #ffc0c0,
-    A400 : #ff8d8d,
-    A700 : #ff7474,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
+  50 : #f9eaea,
+  100 : #f1cbcb,
+  200 : #e8a9a9,
+  300 : #de8787,
+  400 : #d76d6d,
+  500 : #d05353,
+  600 : #cb4c4c,
+  700 : #c44242,
+  800 : #be3939,
+  900 : #b32929,
+  A100 : #fff3f3,
+  A200 : #ffc0c0,
+  A400 : #ff8d8d,
+  A700 : #ff7474,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
 );
 
 $btn-radius: 28pt;
@@ -210,3 +210,11 @@ $container-max-width: 1365px;
 
 $mat-form-bg-color: #ecf3fc;
 $mat-form-border-color: #dae4f1;
+
+@mixin flex($direction, $align, $justify) {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: $direction;
+  align-items: $align;
+  justify-content: $justify;
+}
