--- a/client/src/app/pages/registration/registration.component.html
+++ b/client/src/app/pages/registration/registration.component.html
@@ -16,24 +16,34 @@
       <span class="user_role" [class.active]="checkUserRole('applicant')" (click)="switchRole('applicant')">I’M AN APPLICANT<div class="active-border"></div></span>
       <span class="user_role" [class.active]="checkUserRole('recruiter')" (click)="switchRole('recruiter')">I’M A RECRUITER<div class="active-border"></div></span>
     </div>
-    <mat-form-field appearance="fill">
-      <mat-label>First Name</mat-label>
-      <input matInput placeholder="First Name">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Last Name</mat-label>
-      <input matInput placeholder="Last Name">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Email Address</mat-label>
-      <mat-icon matPrefix>mail_outline</mat-icon>
-      <input matInput placeholder="Email Address">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Password</mat-label>
-      <mat-icon matPrefix>lock_outline</mat-icon>
-      <input matInput placeholder="Password">
-    </mat-form-field>
+    <div class="row__form first">
+      <mat-form-field appearance="fill">
+        <mat-label>First Name</mat-label>
+        <mat-icon matPrefix>person_outline</mat-icon>
+        <input matInput placeholder="First Name" type="text" [formControl]="first_name">
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Last Name</mat-label>
+        <mat-icon matSuffix *ngIf="first_name.valid && last_name.valid">done</mat-icon>
+        <input matInput placeholder="Last Name" type="text" [formControl]="last_name">
+      </mat-form-field>
+    </div>
+    <div class="row__form">
+      <mat-form-field appearance="fill">
+        <mat-label>Email Address</mat-label>
+        <mat-icon matPrefix>mail_outline</mat-icon>
+        <input matInput placeholder="Email Address" type="email" [formControl]="emailAddress">
+        <mat-icon matSuffix *ngIf="emailAddress.valid">done</mat-icon>
+      </mat-form-field>
+    </div>
+    <div class="row__form last">
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <mat-icon matPrefix>lock_outline</mat-icon>
+        <input matInput placeholder="Password" type="password" [formControl]="password">
+        <span matSuffix *ngIf="password.valid" [class.weak]="passwordStrength==='weak'" [class.medium]="passwordStrength==='medium'">{{passwordStrength}}</span>
+      </mat-form-field>
+    </div>
     <div class="row__checkbox">
       <mat-checkbox class="example-margin">I Agree Terms & Conditions</mat-checkbox>
     </div>
