--- a/client/src/app/pages/verification/verification.component.scss
+++ b/client/src/app/pages/verification/verification.component.scss
@@ -1,7 +1,7 @@
+@import './../../../styles/variables.scss';
+
 :host {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(row, center, center);
   min-height: calc(100vh - 70px);
   padding: 70px 0;
   box-sizing: border-box;
@@ -11,9 +11,6 @@
   .row {
     grid-column-start: 1;
     grid-column-end: 13;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include flex(column, center, center);
   }
 }
