--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -16,226 +16,229 @@ $client-theme: mat-light-theme($client-primary, $client-accent, $client-warn);
 // Applies a property to an mat-button element for each of the supported palettes.
 
 @mixin _mat-button-theme-property($theme, $property, $hue, $opacity: 1) {
-    $primary: map-get($theme, primary);
-    $accent: map-get($theme, accent);
-    $warn: map-get($theme, warn);
-    $background: map-get($theme, background);
-    $foreground: map-get($theme, foreground);
-  
-    &.mat-primary {
-      #{$property}: mat-color($primary, $hue, $opacity);
+  $primary: map-get($theme, primary);
+  $accent: map-get($theme, accent);
+  $warn: map-get($theme, warn);
+  $background: map-get($theme, background);
+  $foreground: map-get($theme, foreground);
+
+  &.mat-primary {
+    #{$property}: mat-color($primary, $hue, $opacity);
+  }
+  &.mat-accent {
+    #{$property}: mat-color($accent, $hue, $opacity);
+  }
+  &.mat-warn {
+    #{$property}: mat-color($warn, $hue, $opacity);
+  }
+
+  &.mat-primary, &.mat-accent, &.mat-warn, &[disabled] {
+    &[disabled] {
+      $palette: if($property == 'color', $foreground, $background);
+      #{$property}: mat-color($palette, disabled-button);
     }
-    &.mat-accent {
-      #{$property}: mat-color($accent, $hue, $opacity);
-    }
-    &.mat-warn {
-      #{$property}: mat-color($warn, $hue, $opacity);
-    }
-  
-    &.mat-primary, &.mat-accent, &.mat-warn, &[disabled] {
-      &[disabled] {
-        $palette: if($property == 'color', $foreground, $background);
-        #{$property}: mat-color($palette, disabled-button);
-      }
-    }
+  }
 }
 
 @mixin mat-button-theme($theme) {
-    $primary: map-get($theme, primary);
-    $accent: map-get($theme, accent);
-    $warn: map-get($theme, warn);
-    $background: map-get($theme, background);
-    $foreground: map-get($theme, foreground);
+  $primary: map-get($theme, primary);
+  $accent: map-get($theme, accent);
+  $warn: map-get($theme, warn);
+  $background: map-get($theme, background);
+  $foreground: map-get($theme, foreground);
 
-    .mat-icon-button {
-        color: $btn-text-color;
-        background: transparent;
+  .mat-icon-button {
+    color: $btn-text-color;
+    background: transparent;
 
-        @include _mat-button-theme-property($theme, 'color', default);
-        @include _mat-button-focus-overlay-color($theme);
+    @include _mat-button-theme-property($theme, 'color', default);
+    @include _mat-button-focus-overlay-color($theme);
 
-        .mat-ripple-element {
-            opacity: $_mat-button-ripple-opacity;
-            background-color: currentColor;
-        }
+    .mat-ripple-element {
+      opacity: $_mat-button-ripple-opacity;
+      background-color: currentColor;
     }
+  }
 
-    .mat-button {
-        color: $btn-text-color;
-        background: transparent;
+  .mat-button {
+    color: $btn-text-color;
+    background: transparent;
 
-        @include _mat-button-theme-property($theme, 'color', default);
-
-        .mat-button-focus-overlay {
-            background-color: transparent;
-        }
-
-        .mat-ripple-element {
-            opacity: $_mat-button-ripple-opacity;
-            background-color: currentColor;
-        }
-    }
-
-    .mat-button:hover,
-    .mat-button:active {
-        text-decoration: underline;
-    }
-
-    .mat-stroked-button {
-        color: $btn-text-color;
-        background: transparent;
-        outline-color: map-get($md-cfgray, 500);
-        
-        @include _mat-button-theme-property($theme, 'color', default);
-        @include _mat-button-focus-overlay-color($theme);
-
-        .mat-button-focus-overlay {
-            background-color: transparent;
-        }
-
-        .mat-ripple-element {
-            opacity: $_mat-button-ripple-opacity;
-            background-color: currentColor;
-        }
-    }
-
-    .mat-stroked-button:hover,
-    .mat-stroked-button:active {
-        color: map-get($md-cfprimary, 500);
-        @include _mat-button-theme-property($theme, 'color', default);
-    }
+    @include _mat-button-theme-property($theme, 'color', default);
 
     .mat-button-focus-overlay {
-        background: map_get($foreground, base);
+      background-color: transparent;
     }
 
-    .mat-stroked-button:not([disabled]) {
-        border-color: mat-color($foreground, divider);
+    .mat-ripple-element {
+      opacity: $_mat-button-ripple-opacity;
+      background-color: currentColor;
     }
+  }
 
-    .mat-raised-button {
-        color: $btn-text-color;
-        background-color: mat-color($background, raised-button);
+  .mat-button:hover,
+  .mat-button:active {
+    text-decoration: underline;
+  }
 
-        @include _mat-button-theme-property($theme, 'color', default-contrast, 0.84);
-        @include _mat-button-theme-property($theme, 'background-color', default);
-        @include _mat-button-ripple-color($theme, default-contrast);
-    }
-
-    .mat-flat-button, .mat-fab, .mat-mini-fab {
-        color: $btn-text-color;
-        background-color: mat-color($background, raised-button);
+  .mat-stroked-button {
+    color: $btn-text-color;
+    background: transparent;
+    outline-color: map-get($md-cfgray, 500);
     
-        @include _mat-button-theme-property($theme, 'color', default-contrast);
-        @include _mat-button-theme-property($theme, 'background-color', default);
-        @include _mat-button-ripple-color($theme, default-contrast);
+    @include _mat-button-theme-property($theme, 'color', default);
+    @include _mat-button-focus-overlay-color($theme);
+
+    .mat-button-focus-overlay {
+      background-color: transparent;
+    }
+
+    .mat-ripple-element {
+      opacity: $_mat-button-ripple-opacity;
+      background-color: currentColor;
+    }
+  }
+
+  .mat-stroked-button:hover,
+  .mat-stroked-button:active {
+    color: map-get($md-cfprimary, 500);
+    @include _mat-button-theme-property($theme, 'color', default);
+  }
+
+  .mat-button-focus-overlay {
+    background: map_get($foreground, base);
+  }
+
+  .mat-stroked-button:not([disabled]) {
+    border-color: mat-color($foreground, divider);
+  }
+
+  .mat-raised-button {
+    color: $btn-text-color;
+    background-color: mat-color($background, raised-button);
+
+    @include _mat-button-theme-property($theme, 'color', default-contrast, 0.84);
+    @include _mat-button-theme-property($theme, 'background-color', default);
+    @include _mat-button-ripple-color($theme, default-contrast);
+  }
+
+  .mat-flat-button, .mat-fab, .mat-mini-fab {
+    color: $btn-text-color;
+    background-color: mat-color($background, raised-button);
+
+    @include _mat-button-theme-property($theme, 'color', default-contrast);
+    @include _mat-button-theme-property($theme, 'background-color', default);
+    @include _mat-button-ripple-color($theme, default-contrast);
+  }
+
+  .mat-stroked-button, .mat-flat-button {
+    @include _mat-theme-overridable-elevation(0, $theme);
+  }
+
+  .mat-raised-button {
+    @include _mat-theme-overridable-elevation(2, $theme);
+
+    &:not([disabled]):active {
+      @include _mat-theme-overridable-elevation(8, $theme);
+    }
+
+    &[disabled] {
+      @include _mat-theme-overridable-elevation(0, $theme);
+    }
+  }
+
+  .mat-fab, .mat-mini-fab {
+    @include _mat-theme-overridable-elevation(6, $theme);
+
+    &:not([disabled]):active {
+      @include _mat-theme-overridable-elevation(12, $theme);
+    }
+
+    &[disabled] {
+      @include _mat-theme-overridable-elevation(0, $theme);
+    }
+  }
+
+  .mat-raised-button,
+  .mat-flat-button {
+    &:hover,
+    &:active {
+      .mat-button-focus-overlay {
+        opacity: 0.2;
       }
-
-    .mat-stroked-button, .mat-flat-button {
-        @include _mat-theme-overridable-elevation(0, $theme);
     }
-
-    .mat-raised-button {
-        @include _mat-theme-overridable-elevation(2, $theme);
-
-        &:not([disabled]):active {
-        @include _mat-theme-overridable-elevation(8, $theme);
-        }
-
-        &[disabled] {
-        @include _mat-theme-overridable-elevation(0, $theme);
-        }
-    }
-
-    .mat-fab, .mat-mini-fab {
-        @include _mat-theme-overridable-elevation(6, $theme);
-
-        &:not([disabled]):active {
-        @include _mat-theme-overridable-elevation(12, $theme);
-        }
-
-        &[disabled] {
-        @include _mat-theme-overridable-elevation(0, $theme);
-        }
-    }
-
-    .mat-raised-button,
-    .mat-flat-button {
-        &:hover,
-        &:active {
-            .mat-button-focus-overlay {
-                opacity: 0.2;
-            }
-        }
-    }
+  }
 }
 
 @mixin mat-form-field-fill-theme($theme) {
-    $foreground: map-get($theme, foreground);
-    $is-dark-theme: map-get($theme, is-dark);
-  
-    $fill-background: mat-color($foreground, base, if($is-dark-theme, 0.1, 0.04));
-    $fill-disabled-background: mat-color($foreground, base, if($is-dark-theme, 0.05, 0.02));
-    $underline-color: mat-color($foreground, divider, if($is-dark-theme, 0.5, 0.42));
-    $label-disabled-color: mat-color($foreground, disabled-text);
-  
-    .mat-form-field-appearance-fill {
-        border: solid 1px $mat-form-border-color;
-        border-radius: 0;
-        color: $btn-text-color;
-        &.mat-focused {
-            .mat-form-field-wrapper {
-                .mat-form-field-flex {
-                    background-color: transparent;
-                }
-            }
-        }
-        .mat-form-field-wrapper {
-            padding-bottom: 0;
-            .mat-form-field-flex {
-                background-color: $mat-form-bg-color;
-                border-radius: 0;
-            }
-            .mat-form-field-prefix {
-                margin-right: 15px;
-                color: rgba(#525252, 0.3);
-            }
-            .mat-form-field-infix {
-                label {
-                    color: rgba(map-get($md-cfaccent, 500), 0.44);
-                }
-                input {
-                    height: 25px;
-                }
-            }
-            .mat-form-field-suffix {
-                color: map-get($md-cdgreen, 500)
-            }
-        }
-      
-  
-        &.mat-form-field-disabled .mat-form-field-flex {
-            background-color: $fill-disabled-background;
-        }
+  $foreground: map-get($theme, foreground);
+  $is-dark-theme: map-get($theme, is-dark);
 
-        .mat-form-field-underline {
-            display: none;
-        }
-    
-        .mat-form-field-underline::before {
-            background-color: $underline-color;
-        }
+  $fill-background: mat-color($foreground, base, if($is-dark-theme, 0.1, 0.04));
+  $fill-disabled-background: mat-color($foreground, base, if($is-dark-theme, 0.05, 0.02));
+  $underline-color: mat-color($foreground, divider, if($is-dark-theme, 0.5, 0.42));
+  $label-disabled-color: mat-color($foreground, disabled-text);
   
-        &.mat-form-field-disabled {
-            .mat-form-field-label {
-                color: $label-disabled-color;
-            }
-    
-            .mat-form-field-underline::before {
-                background-color: transparent;
-            }
+  .mat-form-field-appearance-fill {
+    color: $btn-text-color;
+    &.mat-focused {
+      .mat-form-field-wrapper {
+        .mat-form-field-flex {
+          background-color: transparent;
         }
+      }
     }
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+      .mat-form-field-flex {
+        background-color: $mat-form-bg-color;
+        border-radius: 0;
+      }
+      .mat-form-field-prefix {
+        margin-right: 15px;
+        color: rgba(#525252, 0.3);
+      }
+      .mat-form-field-infix {
+        label {
+          color: rgba(map-get($md-cfaccent, 500), 0.44);
+        }
+        input {
+          height: 25px;
+        }
+      }
+      .mat-form-field-suffix {
+        color: map-get($md-cdgreen, 500);
+        .weak {
+          color: map-get($md-cfred, 500);
+        }
+        .medium {
+          color: map-get($md-cfyellow, 500);
+        }
+      }
+    }
+
+    &.mat-form-field-disabled .mat-form-field-flex {
+      background-color: $fill-disabled-background;
+    }
+
+    .mat-form-field-underline {
+      display: none;
+    }
+  
+    .mat-form-field-underline::before {
+      background-color: $underline-color;
+    }
+
+    &.mat-form-field-disabled {
+      .mat-form-field-label {
+        color: $label-disabled-color;
+      }
+
+      .mat-form-field-underline::before {
+        background-color: transparent;
+      }
+    }
+  }
 }
 
 
@@ -249,33 +252,33 @@ html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
 
 /*
-    Text Styles
+  Text Styles
 */
 h1, h2, h3, h4 {
-    font-family: 'Poppins-Bold', sans-serif;
-    color: map-get($md-cfaccent, 500);
+  font-family: 'Poppins-Bold', sans-serif;
+  color: map-get($md-cfaccent, 500);
 }
 h5, h6 {
-    font-family: 'Poppins', sans-serif;
-    color: map-get($md-cfaccent, 500);
+  font-family: 'Poppins', sans-serif;
+  color: map-get($md-cfaccent, 500);
 }
 p {
-    font-family: 'Roboto', sans-serif;
-    color: map-get($md-cfaccent, 400);
+  font-family: 'Roboto', sans-serif;
+  color: map-get($md-cfaccent, 400);
 }
 
 button {
-    border-radius: 500px !important;
-    padding: 10px 40px !important;
-    min-width: 170px !important;
+  border-radius: 500px !important;
+  padding: 10px 40px !important;
+  min-width: 170px !important;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: 15px;
-    padding: 0 60px;
-    width: 100%;
-    max-width: $container-max-width;
-    box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 15px;
+  padding: 0 60px;
+  width: 100%;
+  max-width: $container-max-width;
+  box-sizing: border-box;
 }
