Update styles for login and registration page

--- a/client/src/app/components/toolbar/toolbar.component.html
+++ b/client/src/app/components/toolbar/toolbar.component.html
@@ -5,3 +5,9 @@
 <a routerLink='style-guide' routerLinkActive="active-link">
   Style Guide
 </a>
+
+<a routerLink='login' routerLinkActive="active-link">
+  Login
+</a>
+
+<action-button type="text" title="LogOut" color="accent" (click)="logOut()"></action-button>
