--- a/client/src/app/pages/style-guide/style-guide.component.html
+++ b/client/src/app/pages/style-guide/style-guide.component.html
@@ -39,9 +39,9 @@
   <img src="assets/icons/ic_heart_circle.svg">
   <img src="assets/icons/ic_more.svg">
   <img src="assets/icons/ic_more_vertical.svg">
-  <img src="assets/icons/ic_circle.svg">
-  <img src="assets/icons/ic_checked_circle.svg">
-  <img src="assets/icons/ic_unchecked_circle.svg">
+  <img src="assets/icons/ic_checkbox_empty.svg">
+  <img src="assets/icons/ic_checkbox_checked.svg">
+  <img src="assets/icons/ic_checkbox_indeterminate.svg">
   <img src="assets/icons/ic_search.svg">
   <img src="assets/icons/ic_question.svg">
 </div>
@@ -86,6 +86,10 @@
 <action-button title="Primary Button" color="primary"></action-button>
 <action-button title="Accent Button" color="accent"></action-button>
 <action-button title="Warn Button" color="warn"></action-button>
+<br><br>
+
+<round-checkbox id="test" indeterminate="true" title="Check Box"></round-checkbox>
+
 <br><br>
 
 <mat-form-field appearance="fill">
