--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -32,7 +32,7 @@
       </mat-form-field>
     </div>
     <div class="row__checkbox">
-      <mat-checkbox class="example-margin">Remember Me</mat-checkbox>
+      <round-checkbox id="remember-me" title="Remember Me" [checked]="isRememberMe" (statusChange)="toggleRemember($event)"></round-checkbox>
       <a mat-button disableRipple="true" routerLink="/login">Forgot Password?</a>
     </div>
     <div class="row__buttons">
