--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -79,14 +79,16 @@ $primary-font-color: map-get($md-cfaccent, 500);
       }
       &__checkbox {
         @include flex(row, center, space-between);
+        padding: 15px 20px;
       }
       &__buttons {
+        padding: 20px 0;
         @include flex(row, flex-start, flex-start);
         action-button {
-          margin: 50px;
+          margin: 0 25px;
         }
         :first-child {
-          margin: 50px 0;
+          margin: 0;
         }
       }
       &__social_icons {
