--- a/client/src/app/pages/registration/registration.component.html
+++ b/client/src/app/pages/registration/registration.component.html
@@ -45,7 +45,7 @@
       </mat-form-field>
     </div>
     <div class="row__checkbox">
-      <mat-checkbox class="example-margin">I Agree Terms & Conditions</mat-checkbox>
+      <round-checkbox id="agree-term" title="I Agree Terms & Conditions" [checked]="isAgreeTerm" (statusChange)="toggleAgreeTerm($event)"></round-checkbox>
     </div>
     <div class="row__buttons">
       <action-button type="raised" title="Login" (click)="navigateToLogin()"></action-button>
