--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -218,3 +218,11 @@ $mat-form-border-color: #dae4f1;
   align-items: $align;
   justify-content: $justify;
 }
+
+@mixin disable-select() {
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+}
