Implement registration flow - Basic Profile Page

--- a/client/src/app/components/toolbar/toolbar.component.html
+++ b/client/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
-<a routerLink='/' routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+<!-- <a routerLink='/' routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     Home
-</a>
+</a> -->
 
 <a routerLink='style-guide' routerLinkActive="active-link">
   Style Guide
@@ -9,5 +9,5 @@
 <a routerLink='login' routerLinkActive="active-link">
   Login
 </a>
-
-<action-button type="text" title="LogOut" color="accent" (click)="logOut()"></action-button>
+<!-- 
+<action-button type="text" title="LogOut" color="accent" (click)="logOut()"></action-button> -->
