--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -8,7 +8,7 @@ $primary-font-color: map-get($md-cfaccent, 500);
   padding: 70px 0;
   box-sizing: border-box;
   @media only screen and (max-width: $tablet-breakpoint) {
-    padding: 40px 0;
+    padding: 50px 0;
   }
 }
 .container {
@@ -115,6 +115,10 @@ $primary-font-color: map-get($md-cfaccent, 500);
   }
   a.mat-button {
     padding: 0;
+  }
+
+  action-button {
+    min-width: 160px;
   }
 
   @media only screen and (max-width: $tablet-breakpoint) {
