--- a/client/src/styles/cf-theme.scss
+++ b/client/src/styles/cf-theme.scss
@@ -170,6 +170,42 @@ $client-theme: mat-light-theme($client-primary, $client-accent, $client-warn);
   }
 }
 
+@mixin mat-form-field-legacy-theme($theme) {
+  $foreground: map-get($theme, foreground);
+  $is-dark-theme: map-get($theme, is-dark);
+
+  $label-color: mat-color($foreground, secondary-text);
+  $underline-color: mat-color($foreground, divider, if($is-dark-theme, 0.7, 0.42));
+
+  .mat-form-field-appearance-legacy {
+    color: $btn-text-color;
+    .mat-form-field-wrapper {
+      padding-bottom: 0;
+      .mat-form-field-infix {
+        label {
+          color: rgba(map-get($md-cfaccent, 500), 0.44);
+        }
+      }
+    }
+    .mat-form-field-label {
+      color: $label-color;
+    }
+
+    .mat-hint {
+      color: $label-color;
+    }
+
+    .mat-form-field-underline {
+      background-color: $underline-color;
+      display: none;
+    }
+
+    &.mat-form-field-disabled .mat-form-field-underline {
+      @include mat-control-disabled-underline($underline-color);
+    }
+  }
+}
+
 @mixin mat-form-field-fill-theme($theme) {
   $foreground: map-get($theme, foreground);
   $is-dark-theme: map-get($theme, is-dark);
